[package]
name = "mcp-server-sequential-thinking"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
terminal_size = "0.4"
textwrap = { version = "0.16", features = ["terminal_size"] }
chrono = { version = "0.4", features = ["serde"] }
