[package]
name = "mcp-server-sequential-thinking"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
terminal_size = "0.4"
textwrap = { version = "0.16", features = ["terminal_size"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
